--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -254,7 +254,7 @@ ul#nav li.current a { color: #11CBD7; }
    letter-spacing: 1px;
 }
 #resume h1 span {
-   border-bottom: 3px solid #179038;
+   border-bottom: 3px solid #11cbd7;
    padding-bottom: 6px;
 }
 #resume h3 {
@@ -294,12 +294,22 @@ ul#nav li.current a { color: #11CBD7; }
    padding-bottom: 60px;
 }
 #portfolio h1 {
-   font: 15px/24px 'opensans-semibold', sans-serif;
+   font: 18px/24px 'opensans-semibold', sans-serif;
    text-transform: uppercase;
    letter-spacing: 1px;
    text-align: center;
    margin-bottom: 48px;
-   color: #95A3A3;
+}
+
+#portfolio h1 span {
+   border-bottom: 3px solid #11cbd7;
+   padding-bottom: 6px;
+}
+
+#portfolio h4 {
+   font: 13px/20px 'opensans-semibold', sans-serif;
+   letter-spacing: 1px;
+   text-align: center;
 }
 
 /* Portfolio Content */
